suspend tflint temporarily

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
   hooks:
     - id: terraform_fmt
     - id: terraform_docs
-    - id: terraform_tflint
+    # - id: terraform_tflint
     - id: terraform_trivy
     - id: terraform_validate
 #    - id: terrascan
