--- a/.github/workflows/link.yaml
+++ b/.github/workflows/link.yaml
@@ -1,4 +1,4 @@
-name: Set backend
+name: Link
 
 permissions:
   read-all
@@ -14,8 +14,8 @@ on:
 
 jobs:
 
-  set-backend:
-    uses: stormreply/storm-library-for-terraform/.github/workflows/set-backend.yaml@main
+  link:
+    uses: stormreply/slt-workflows/.github/workflows/link.yaml@main
     with:
       backend_account: ${{ inputs.backend_account || vars.BACKEND_ACCOUNT }}
       backend_region: ${{ inputs.backend_region || vars.BACKEND_REGION }}
